logica funcionando sin el conteo de rondas

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>clase #1</title>
+    <title>Piedra Papel Tijeras</title>
 </head>
 
 <body>
+
+    <section id="selectors">
+        <button id="piedra">PIEDRA</button>
+        <button id="papel">PAPEL</button>
+        <button id="tijeras">TIJERAS</button>
+    </section>
 
     <script src="./main.js"></script>
 </body>
