--- a/index.html
+++ b/index.html
@@ -5,15 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piedra Papel Tijeras</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <article id="table">
+    </article>
+    <section id="results">
+        <div id="container">
+            <div id="player" class="box"></div>
+        </div>
+        <div>
+            <h1>Vs</h1>
+        </div>
+        <div id="container">
+            <div id="computer" class="box"></div>
+        </div>
+    </section>
     <section id="selectors">
         <button id="piedra">PIEDRA</button>
         <button id="papel">PAPEL</button>
         <button id="tijeras">TIJERAS</button>
     </section>
+    <div id="winner">
+
+    </div>
 
     <script src="./main.js"></script>
 </body>
