--- a/index.html
+++ b/index.html
@@ -9,26 +9,28 @@
 </head>
 
 <body>
-    <article id="table">
-    </article>
-    <section id="results">
-        <div id="container">
-            <div id="player" class="box"></div>
+    <div id="app">
+        <article id="table">
+        </article>
+        <section id="results">
+            <div id="container">
+                <div id="player" class="box"></div>
+            </div>
+            <div>
+                <h1>Vs</h1>
+            </div>
+            <div id="container">
+                <div id="computer" class="box"></div>
+            </div>
+        </section>
+        <section id="selectors">
+            <button id="piedra">PIEDRA</button>
+            <button id="papel">PAPEL</button>
+            <button id="tijeras">TIJERAS</button>
+        </section>
+        <div id="winner">
+    
         </div>
-        <div>
-            <h1>Vs</h1>
-        </div>
-        <div id="container">
-            <div id="computer" class="box"></div>
-        </div>
-    </section>
-    <section id="selectors">
-        <button id="piedra">PIEDRA</button>
-        <button id="papel">PAPEL</button>
-        <button id="tijeras">TIJERAS</button>
-    </section>
-    <div id="winner">
-
     </div>
 
     <script src="./main.js"></script>
